--- a/index.html
+++ b/index.html
@@ -623,7 +623,8 @@
 
       </div>
     </section><!-- End Contact Section -->
-
+    <h3><strong>Website Counter</strong> </h3>
+    <p>Counter value: <span id="counter">0</span></p>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
